@@ -72,6 +72,9 @@ Math::BigRat:
  * new('1.2.2') was valid (resulted in 12/10 due to bug in BigFloat)
  * new() for some cases left internal state not as 0/0 for NaN, inf, -inf etc
  * binc()/bdec() were missing entirely
+2002-08-13 v0.08 Tels
+ * bsstr() returned positive result for negative numbers - Oups!
+ * added a numify() so that $array[Math::BigRat->new('17/8')] works
 
 Please send me test-reports, your experiences with this and your ideas - I love
 to hear about my work!
